feat: configure CORS and secrets via environment variables for production